Commit before starting video 35

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -15,6 +15,8 @@
     <br><br>
     <input type="submit" value="Login" />
 </form>
+<p>Need an account? Please<a href="/register/">register</a></p>
+
 {% else %}
 <p>You're already logged in. Would you like to <a href="/logout/">logout</a>?</p>
 {% endif %}
