Commit before starting video 46

--- a/templates/articles/search.html
+++ b/templates/articles/search.html
@@ -1,12 +1,15 @@
+
+
 {% extends "base.html" %}
 
 {% block content %}
 
-{% if object %}
-
-<h1>Title: {{object.title}} - ({{object.id}})!</h1>
-<p>Content: {{object.content}}</p>
-
-{% endif %}
+<ol>
+    {% for object in object_list %}
+        {% if object.title %}
+        <li><a href="{{object.get_absolute_url}}"> {{ object.title }} </a></li>
+        {% endif%}
+    {% endfor %}
+</ol>
 
 {% endblock content %}
